--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -218,10 +218,12 @@ header {
 	}
 }
 
-.img_logo{
-	width: 30%;
-	padding-right: 50px;
-	float: left;
+.container {
+	img {
+		width: 30%;
+		padding-right: 50px;
+		float: left;
+	}
 }
 
 .navbar {
