--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -218,12 +218,10 @@ header {
 	}
 }
 
-.container {
-	img {
-		width: 30%;
-		padding-right: 50px;
-		float: left;
-	}
+img[src*="#profile"] {
+	width: 30%;
+	padding-right: 50px;
+	float: left;
 }
 
 .navbar {
