--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 {%- if site.texture.showNav -%}
 <div class="navbar">
 	<ul>
-		<a href="/"><li>Blog</li></a>
-		<a href="/about"><li>About me</li></a>
+		<a href="/blog"><li>Blog</li></a>
+		<a href="/"><li>About me</li></a>
 	</ul>
 </div>
 {%- endif -%}
